# bioinformatics-2110581

.fleet/: settings.json
algo_cpu/: CMakeLists.txt  main.c  main_nw.c  main_nw_openmp.c  main_sw.c  seq1.fasta  seq2.fasta
algo_cpu/include/: bio_cpu.c  bio_cpu.c.bk  bio_cpu.h  bio_cpu_openmp.c  bio_cpu_openmp.h  fasta.c  fasta.h
algo_cpu/test/: scratch_4.txt  test_nw.c
algo_cuda/: CMakeLists.txt  main.cu
algo_cuda/include/: bio_cuda.cuh
algo_cuda/ref/: bio_cpu.c
algo_gpu/: CMakeLists.txt  main.exp  main.lib
algo_metal/: CMakeLists.txt  main.cpp
codon/: a1.ccap  a1.ccap.bak
codon/edit_dir/: untitled.ace.1
codon/phd_dir/: sample1_0x.phd.1  sample1_100x.phd.1  sample1_101x.phd.1  sample1_102x.phd.1  sample1_103x.phd.1  sample1_104x.phd.1  sample1_105x.phd.1  sample1_106x.phd.1  sample1_108x.phd.1  sample1_109x.phd.1  sample1_10x.phd.1  sample1_110x.phd.1  sample1_111x.phd.1  sample1_112x.phd.1  sample1_113x.phd.1  sample1_114x.phd.1  sample1_115x.phd.1  sample1_116x.phd.1  sample1_117x.phd.1  (+155 more)
others/: ballistics.py
program/: fasta_parser.py  seq_assembler.py
project/: bench_cpu.py  calc_mem.py  generate_sequences.py
script/: a60b_q3_perimeter.py  assembler.py  dbg.py  dijkstra.py  euler.py  graph_ex05m1.py  out  pam250gen.py  pam250run.py  prim.py  scc.py  test1.py
text files/: sample_2_2_1.fastq  sample_2_2_2.fastq  search.py
week10/: 1iep_ligand_out.pdbqt  PubChem_compound_list.csv  Receptors_PDB_IDs.txt  docking.ipynb  docking1.ipynb
week11/: AlphaFold2.ipynb  KU.cif  KUDNA.cif  ku_superimposition.ipynb
week12/: rand_motif.py  samples.fasta
week2/: p2.py  p3.py  p4.py  p5.py
week3/: bwt.py  example_result.txt  out_1  reads1.fastq  reads2.fastq  reference.fastq  substr_search.py
week5/: sw_alg.py
week5_2/: overlap.py  overlap_map.py
week6/: nussinov.py  sequence.in  sequence.out  test_rna_2d.py
week8/: clustalo-I20231012-090525-0711-41855140-p1m.clustal_num  ebi.ac.uk_Tools_services_rest_clustalo_result_clustalo-I20231012-090525-0711-41855140-p1m_phylotree.txt  proteins.fasta  run_amino.py
week9/: 196genes_635021f405530.csv  K_means_Iris.ipynb  clustering_hierachy.ipynb  clustering_kmean.ipynb
(+864 files in other folders)
